# ddia

./: .gitignore  .markdownlint.json  .markdownlint.yaml  CHANGELOG.md  README.md
chapter01_perf_test/: README.md  main.py
chapter02_data_models/: .gitignore  README.md  architecture.md  document_data_model.md  go.mod  go.sum  graph_data_model.md  graph_data_models.md  justfile  main.go  main.py  mongodb.py  neo4j_social.py  postgres.py  pyproject.toml  relational_data_model.md  script.py
chapter02_data_models/resume/postgres/: follower_with_ge_x_followers.sql  followers.sql  schema.sql
chapter02_data_models/sql/: follower_with_ge_x_followers.sql  query.sql  schema.sql  summary.sql
chapter03_storage_and_retrieval/: .gitignore  README.md  go.mod  main.go
chapter03_storage_and_retrieval/cmd/: db.go  lib.go  lsm.go  root.go
day01_perf_test/: analyze.py  pyproject.toml
day02_data_models/: docker-compose.yml  justfile  main.py  pyproject.toml  relational_data_model.md
day02_data_models/resume/postgres/: schema.sql
day02_data_models/resume/postgres/schemas/: education.sql  users.sql
